# GenNER

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/ner/: entity.rs  mod.rs  parser.rs  pipeline.rs  prompt.rs  verification.rs
crates/core/src/retrieval/: hnsw.rs  knn.rs  mod.rs  store.rs  strategy.rs
crates/core/src/training/: adapter.rs  data.rs  lora.rs  mod.rs  trainer.rs
crates/core/src/traits/: embedding.rs  mod.rs  model.rs  quantization.rs  tokenizer.rs
crates/inference/: Cargo.toml
crates/inference/src/: batch.rs  cache.rs  engine.rs  generator.rs  lib.rs  training.rs
crates/models/: Cargo.toml
crates/models/src/: base.rs  candle_model.rs  lib.rs  llama.rs  lora_layer.rs  loss.rs  lr_schedule.rs  qwen.rs  registry.rs  tokenizer.rs  training_optimizations.rs  training_step.rs
crates/python/: Cargo.toml
crates/python/src/: convert.rs  error.rs  lib.rs
crates/python/src/inference/: mod.rs
crates/python/src/models/: mod.rs
crates/python/src/ner/: mod.rs
crates/python/src/retrieval/: mod.rs
crates/python/src/training/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: io.rs  lib.rs  progress.rs  text.rs
examples/: basic_ner.py  complete_pipeline.py  inference.py  retrieval.py  simple_ner.py
python/genner/: __init__.py  config.py  data.py  evaluation.py  utils.py
python/tests/: test_ner.py
tests/common/: mod.rs
tests/unit/: test_lora.rs  test_parser.rs  test_prompt.rs
