[workspace]
members = [
    "crates/core",
    "crates/models",
    "crates/inference",
    "crates/python",
    "crates/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["GenNER Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/genner/genner"
homepage = "https://github.com/genner/genner"

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
rand = "0.8"

# Async
tokio = { version = "1.42", features = ["sync", "rt-multi-thread"] }

# Math/ML (optional - only specify as optional in individual crate Cargo.toml)
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
half = "2.5"

# Quantization (using the correct crate name)
hnsw = "0.1"

# PyO3
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
tokenizers = "0.21"
hf-hub = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev.package."*"]
opt-level = 3
