[package]
name = "genner-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genner-core = { path = "../core" }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand = "0.8"

# Candle for model implementations
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
half = { workspace = true }

# Tokenizers
tokenizers = { workspace = true }
hf-hub = { workspace = true }
